# vlasolve

./: CMakeLists.txt  License.txt  readme.md
backup/: CMakeLists.txt  NDfield.c  NDfield.h  back.hxx  dimTraits.hxx  global.h  grid.hxx  initGen.cpp  initGen.hxx  initGen_Hernquist.hxx  initGen_Plummer.hxx  initGen_UniformDensitySphere.hxx  initGen_all.hxx  interpol.hxx  interpol_DUMMY.hxx  interpol_PFC2.hxx  interpol_spline.cpp  interpol_spline.hxx  localSpline.hxx  myendian.c  quadrature21.hxx  scale.hxx  setup.hxx  snapshots.hxx  solverParams.hxx  solver_traits.hxx  splineInterface.hxx  splinetest.i  types.h  vlasolve.cpp  vlasovSolver.hxx  vlasovSolver21_spline.hxx  vlasovSolver_spherical.cpp
backup/backup2/: CMakeLists.txt  NDfield.hxx  all_grids.hxx  cellChain.hxx  dummyCellChain.hxx  grid_21.hxx  grid_base.hxx  grid_handler.hxx  initGen.hxx  initGen_Hernquist.hxx  initGen_Plummer.hxx  initGen_UniformDensitySphere.hxx  initGen_all.hxx  interpol_spline.hxx  kernel.hxx  mpiCommunication.hxx  myIO.hxx  paramsParser.hxx  quadrature21.hxx  scale.hxx  setup.hxx  slicer21.hxx  solverParam.hxx  solver_traits.hxx  typeSelect.hxx  types.h  valLocationType.hxx  vlasolve.cpp  vlasovSolver.hxx  vlasovSolver21.hxx  vlasovSolver21_spline.hxx
manual/: FILE_FORMAT  README
modules/: FindEinspline.cmake  FindFFTW3.cmake
notes/notes_vlasolve/: notes_vlasolve.aux  notes_vlasolve.tex  notes_vlasolve.tex~  psfig.tex
notes/notes_vlasolve/fig/: delayed.eps  delayed.pdf~  reflective.pdf~  reflective.ps
params/: UDF.ini
src/: FFTW_tools.hxx  NDfield.hxx  all_grids.hxx  cellChain.hxx  defines.h  dimTraits.hxx  dummyCell21.hxx  dummyCell21_vect.hxx  fieldIterator.hxx  find_unordered_maps.hxx  global.h  gridNN.hxx  gridNav.hxx  grid_21.hxx  grid_base.hxx  grid_handler.hxx  helpers.hxx  initGen.hxx  initGen_Hernquist.hxx  initGen_Plummer.hxx  initGen_PowerLawDensitySphere.hxx  initGen_UniformDensitySphere.hxx  initGen_all.hxx  initGen_testNN.hxx  integrand21.hxx  integrandNN.hxx  interpol_spline.hxx  kernel.hxx  localSpline.hxx  mpiCommunication.hxx  mpiRequests.hxx  myIO.hxx  myMpi.hxx  openMP_interface.hxx  paramsParser.hxx  poissonNN.hxx  quadrature21.hxx  quadratureNN.hxx  scale.hxx  setup.hxx  (+17 more)
src/backup/: mpiCommunication.hxx  myMPI.hxx
yorick/: show_stats.i  tests.i  vlasolve.i
