#AUX_SOURCE_DIRECTORY("." ALL_SRC) 
FILE(GLOB HSources *.h)
FILE(GLOB HXXSources *.hxx)
FILE(GLOB CPPSources *.cpp)

SET( VLASOLVE_SRC
  ${CPPSources}
  ${HXXSources}
  ${HSources}
  )
message(STATUS " Source :   ${HXXSources}")

add_executable(vlasolve ${VLASOLVE_SRC})
  
SET(TARGETS_LIST_LOC ${TARGETS_LIST_LOC} vlasolve)
install (TARGETS vlasolve DESTINATION bin)




SET(TARGETS_LIST ${TARGETS_LIST} ${TARGETS_LIST_LOC} PARENT_SCOPE)
SET(NOT_BUILT_TARGETS_LIST ${NOT_BUILT_TARGETS_LIST} ${NOT_BUILT_TARGETS_LIST_LOC} PARENT_SCOPE)

SET(DISABLED_FEATURES_LIST ${DISABLED_FEATURES_LIST} ${DISABLED_FEATURES_LIST_LOC} PARENT_SCOPE)
